--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: build
         env:
-           BASE_PATH: '/my-vis-5609'
+           BASE_PATH: '/assignments-5609'
         run: npm run build
 
       - name: Upload Artifacts
